Ajuste do backend com novas estruturas
